--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "php": "^8.1"
+    "php": "^8.1",
+    "symfony/var-exporter": "~6.2"
   },
   "autoload": {
     "files": [
