--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   ],
   "require": {
     "php": "^8.1",
+    "psr/simple-cache": "^2.0||^3.0",
     "symfony/var-exporter": "~6.2"
   },
   "autoload": {
