--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,20 @@
     }
   ],
   "require": {
-    "php": "^8.1",
+    "php": "^8.2",
     "psr/simple-cache": "^2.0||^3.0",
-    "symfony/var-exporter": "~6.2"
+    "symfony/var-exporter": "^7.2"
   },
   "autoload": {
     "files": [
+        "src/constants.php",
         "src/functions.php",
+        "src/Cache/functions.php",
         "src/Exception/functions.php",
-        "src/Stream/functions.php"
+        "src/Index/functions.php",
+        "src/Stream/functions.php",
+        "src/Utils/functions.php",
+        "src/VarExport/functions.php"
     ],
     "psr-4": {
       "Ocache\\": "src/"
